--add-exports-private changed to --add-opens.