@@ -99,7 +99,7 @@ public class PlatformProviderTest implements PlatformProvider {
                   .outdir(".")
                   .options("-J--class-path=" + System.getProperty("test.classes"),
                            "-J--add-exports=jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED",
-                           "-J--add-exports-private=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                           "-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                            "-XDrawDiagnostics",
                            "--release",
                            platformSpec,
@@ -134,7 +134,7 @@ public class PlatformProviderTest implements PlatformProvider {
                   .outdir(".")
                   .options("-J--class-path=" + System.getProperty("test.classes"),
                            "-J--add-exports=jdk.compiler/com.sun.tools.javac.platform=ALL-UNNAMED",
-                           "-J--add-exports-private=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+                           "-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                            "--release",
                            "fail",
                            System.getProperty("test.src") + "/PlatformProviderTestSource.java")
